# parallel-manager

./: .gitignore  LICENSE  README.md  manager.py  pyproject.toml  test.py  worker.py  workerGroup.py
.github/workflows/: python-package.yml
examples/: example_simpleShell.py  example_simpleShell_failed.py  example_simpleShell_recover.py  example_simpleShell_sleep.py
parallel_manager/: manager.py  packet.py  stats.py  utils.py  worker.py  workerGroup.py
test/: test.py
tests/: test_BaseShellManager.py
